--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
 
     <footer>
         <p>&copy; 2023 Odisha Job Notifications. All Rights Reserved. Made With <i class="bi bi-balloon-heart-fill"></i>
-            srpchoudhury</p>
+            srpchoudhury V(1.0)</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
