--- a/index.html
+++ b/index.html
@@ -256,8 +256,8 @@
     </div>
 
     <footer>
-        <p>&copy; 2023 Odisha Job Notifications. All Rights Reserved. Made With <i class="bi bi-balloon-heart-fill"></i>
-            srpchoudhury V(1.0)</p>
+        <p>&copy; 2023 Odisha Job Notifications. All Rights Reserved. V(1.0) Made With <i class="bi bi-balloon-heart-fill"></i>
+            srpchoudhury </p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
