--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <!-- Nav Bar-->
+   
     <!-- Nav Bar-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
         <div class="container-fluid">
@@ -73,7 +73,7 @@
                 <div class="position-sticky">
                     <ul class="nav flex-column">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">
+                            <a class="nav-link active" aria-current="page" href="Latest Notifications.html">
                                 <i class="bi bi-bell-fill d-md-inline"></i>
                                 <span class=""> Latest Notifications</span>
                             </a>
@@ -256,8 +256,8 @@
     </div>
 
     <footer>
-        <p>&copy; 2023 Odisha Job Notifications. All Rights Reserved. V(1.0) Made With <i class="bi bi-balloon-heart-fill"></i>
-            srpchoudhury </p>
+        <p>&copy; 2023 Odisha Job Notifications. All Rights Reserved. Made With <i class="bi bi-balloon-heart-fill"></i>
+            srpchoudhury V(1.0)</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
