--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <ul class="nav flex-column">
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="Latest Notifications.html">
-                                  <i class="bi bi-star-fill d-md-inline " style="color: red;"></i>
+                                  <i class="bi bi-bell-fill d-md-inline " style="color: red;"></i>
                                 <span class=""> Latest Notifications</span>
                             </a>
                         </li>
