--- a/index.html
+++ b/index.html
@@ -171,13 +171,13 @@
                     </a>
                 </div>
 
-                <!-- Cards-->
+                 <!-- Cards-->
                 <div class="row">
                     <div class="col-md-4">
                         <div class="card p-2">
                             <div class="card-header">
                                 <h4 style="color: blue;"> ODISHA AGRICULTURE</h4>
-                                <h5> <span class="badge bg-dark">New</span></h5>
+                                <h5> <span class="badge bg-dark">New</span> <span class="badge bg-info"><a class="nav-link" href="Latest Notifications.html">View Details</a></span></h5>
                             </div>
                             <div class="card-body">
                                 <h4 style="color: blue;"> DEPARTMENT NEW</h4>
@@ -193,6 +193,7 @@
                     </div>
                 </div>
                 <!-- Cards-->
+
 
 
                 <div class="container-fluid">
