--- a/index.html
+++ b/index.html
@@ -74,24 +74,25 @@
                     <ul class="nav flex-column">
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="Latest Notifications.html">
-                                  <i class="bi bi-bell-fill d-md-inline " style="color: red;"></i>
+                                <i class="bi bi-bell-fill d-md-inline " style="color: red;"></i>
                                 <span class=""> Latest Notifications</span>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">
+                            <a class="nav-link disabled" href="#">
                                 <i class="bi bi-bell-fill d-md-inline"></i>
                                 <span class=""> Upcoming Notifications</span>
                             </a>
                         </li>
+                        
                         <li class="nav-item">
-                            <a class="nav-link" href="#">
+                            <a class="nav-link disabled" href="#">
                                 <i class="bi bi-bell-fill d-md-inline"></i>
                                 <span class=""> Examwise Notifications</span>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">
+                            <a class="nav-link disabled" href="#">
                                 <i class="bi bi-bell-fill d-md-inline"></i>
                                 <span class=""> Notification Status</span>
                             </a>
@@ -100,25 +101,25 @@
                         <hr class="d-block d-md-none">
                         <hr class="d-none d-md-block">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">
+                            <a class="nav-link disabled" href="#">
                                 <i class="bi bi-book-fill d-md-inline"></i>
                                 <span class=""> Education</span>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">
+                            <a class="nav-link disabled" href="#">
                                 <i class="bi bi-app d-md-inline"></i>
                                 <span class=""> Admit Card</span>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">
+                            <a class="nav-link disabled" href="#">
                                 <i class="bi bi-emoji-laughing d-md-inline"></i>
                                 <span class=""> Exam Results</span>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">
+                            <a class="nav-link disabled" href="#">
                                 <i class="bi bi-calendar-check d-md-inline"></i>
                                 <span class=""> Exam Date</span>
                             </a>
@@ -127,19 +128,19 @@
                         <hr class="d-block d-md-none">
                         <hr class="d-none d-md-block">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">
+                            <a class="nav-link disabled" href="#">
                                 <i class="bi bi-ladder d-md-inline"></i>
                                 <span class="">Eligibility</span>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">
+                            <a class="nav-link disabled" href="#">
                                 <i class="bi bi-book-fill d-md-inline"></i>
                                 <span class="">Syllabus</span>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">
+                            <a class="nav-link disabled" href="#">
                                 <i class="bi bi-arrow-up-circle d-md-inline"></i>
                                 <span class="">Selection Process</span>
                             </a>
