--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="style.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
