--- a/index.html
+++ b/index.html
@@ -172,13 +172,38 @@
                     </a>
                 </div>
 
-                 <!-- Cards-->
+               <!-- Cards-->
                 <div class="row">
                     <div class="col-md-4">
                         <div class="card p-2">
                             <div class="card-header">
+                                <h4 style="color: blue;"> Odisha Tahasil Office</h4>
+                                <h5> <span class="badge bg-dark">New</span> <span class="badge bg-info"><a
+                                            class="nav-link" href="OdishaTahasilOffice.html">View Details</a></span>
+                                </h5>
+                            </div>
+                            <div class="card-body">
+                                <h4 style="color: blue;"> DEPARTMENT NEW</h4>
+                                <p style="color: green;"> Recruitment!!! Applay For MIS Asst. and Coordinator Posts</p>
+                                <h5> <a class="nav-link"
+                                        href="https://drive.google.com/file/d/1hX9ivpQ5eeKSgK2f00V-uoH4HCH9pGDR/view?usp=drivesdk">
+                                        Notification PDF Here <span class="badge bg-danger">Download</span></a></h5>
+                                <h5> <a class="nav-link"
+                                        href="https://drive.google.com/file/d/1z1zb-U8rt3VM4T8msjQDH1QAc-8FP1Ui/view?usp=drivesdk">
+                                        Bio Data Form <span class="badge bg-danger">Download</span></a></h5>
+                            </div>
+                            <div class="card-footer">
+                                <h4 style="color: black;">25,000 Per Month</h4>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card p-2">
+                            <div class="card-header">
                                 <h4 style="color: blue;"> ODISHA AGRICULTURE</h4>
-                                <h5> <span class="badge bg-dark">New</span> <span class="badge bg-info"><a class="nav-link" href="LatestNotifications.html">View Details</a></span></h5>
+                                <h5> <span class="badge bg-dark">New</span> <span class="badge bg-info"><a
+                                            class="nav-link" href="LatestNotifications.html">View Details</a></span>
+                                </h5>
                             </div>
                             <div class="card-body">
                                 <h4 style="color: blue;"> DEPARTMENT NEW</h4>
@@ -192,6 +217,7 @@
                             </div>
                         </div>
                     </div>
+                  
                 </div>
                 <!-- Cards-->
 
