--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <div class="position-sticky">
                     <ul class="nav flex-column">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="LatestNotifications.html">
+                            <a class="nav-link active" aria-current="page" href="Agriculture.html">
                                 <i class="bi bi-bell-fill d-md-inline " style="color: red;"></i>
                                 <span class=""> Latest Notifications</span>
                             </a>
@@ -179,7 +179,7 @@
                             <div class="card-header">
                                 <h4 style="color: blue;"> Odisha Tahasil Office</h4>
                                 <h5> <span class="badge bg-dark">New</span> <span class="badge bg-info"><a
-                                            class="nav-link" href="OdishaTahasilOffice.html">View Details</a></span>
+                                            class="nav-link" href="Agriculture.html">View Details</a></span>
                                 </h5>
                             </div>
                             <div class="card-body">
