--- a/OdishaTahasilOffice.html
+++ b/OdishaTahasilOffice.html
@@ -89,7 +89,7 @@
                     <div class="card-header">
                         <h4 style="color: blue;"> Odisha Tahasil Office</h4>
                         <h5> <span class="badge bg-dark">New</span> <span class="badge bg-info"><a
-                                    class="nav-link" href="LatestNotifications.html">View Details</a></span>
+                                    class="nav-link" href="#">View Details</a></span>
                         </h5>
                     </div>
                     <div class="card-body">
