--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <div class="position-sticky">
                     <ul class="nav flex-column">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="OdishaTahasilOffice.html">
+                            <a class="nav-link active" aria-current="page" href="LatestNotification.html">
                                 <i class="bi bi-bell-fill d-md-inline " style="color: red;"></i>
                                 <span class=""> Latest Notifications</span>
                             </a>
@@ -172,7 +172,8 @@
                     </a>
                 </div>
 
-               <!-- Cards-->
+
+                  <!-- Cards-->
                 <div class="row">
                     <div class="col-md-4">
                         <div class="card p-2">
@@ -197,31 +198,10 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4">
-                        <div class="card p-2">
-                            <div class="card-header">
-                                <h4 style="color: blue;"> ODISHA AGRICULTURE</h4>
-                                <h5> <span class="badge bg-dark">New</span> <span class="badge bg-info"><a
-                                            class="nav-link" href="Agriculture.html">View Details</a></span>
-                                </h5>
-                            </div>
-                            <div class="card-body">
-                                <h4 style="color: blue;"> DEPARTMENT NEW</h4>
-                                <p style="color: green;"> Recruitment!!! Applay Online for Various Posts! Salary</p>
-                                <h5> <a class="nav-link"
-                                        href="https://drive.google.com/file/d/1iXfEAJFoy0oupAa3KW14Z7z_078OHbdg/view?usp=drivesdk">
-                                        Download PDF Here <span class="badge bg-danger">Download</span></a></h5>
-                            </div>
-                            <div class="card-footer">
-                                <h4 style="color: black;">35,000 Per Month</h4>
-                            </div>
-                        </div>
-                    </div>
-                  
+
+
                 </div>
                 <!-- Cards-->
-
-
 
                 <div class="container-fluid">
                     <!-- Your existing box elements here -->
