--- a/index.html
+++ b/index.html
@@ -262,12 +262,12 @@
                     <div class="row mt-1">
                         <div class="col-md-4">
                             <div class="box">
-                                Tahasil Office Jobs
+                                  <a href="OdishaTahasilOffice.html" class="nav-link">  Tahasil Office Jobs</a>
                             </div>
                         </div>
                         <div class="col-md-4">
                             <div class="box">
-                                Post Office Jobs
+                                  <a href="Agriculture.html" class="nav-link"> Agriculture Jobs</a>
                             </div>
                         </div>
                         <div class="col-md-4">
