--- a/index.html
+++ b/index.html
@@ -54,8 +54,12 @@
                         </ul>
                     </li>
                 </ul>
-                <form class="d-flex">
+                 <!-- <form class="d-flex">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                </form> -->
+                <form class="d-flex">
+                    <input class="form-control me-2" type="search" id="searchInput" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success" type="submit">Search</button>
                 </form>
             </div>
@@ -174,7 +178,7 @@
 
 
         <!-- Cards-->
-                <div class="row">
+                <div class="row"  id="cardContainer">
                     <div class="col-md-4">
                         <div class="card p-2">
                             
