--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
                             Select Job Category
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">Govt Jobs</a></li>
-                            <li><a class="dropdown-item" href="#">Odisha Govt Jobs</a></li>
+                            <li><a class="dropdown-item" href="LatestNotification.html">Govt Jobs</a></li>
+                            <li><a class="dropdown-item" href="LatestNotification.html">Odisha Govt Jobs</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
