--- a/HondaRecruitment.html
+++ b/HondaRecruitment.html
@@ -124,7 +124,7 @@
                     <h4 style="color: #28a745;"> Qualification:</h4>
                 </dt>
                 <dd class="col-sm-9">
-                    <p> – 10th + ITI Pass Out<< /p>
+                    <p> – 10th + ITI Pass Out</p>
                 </dd>
 
                 <dt class="col-sm-3">
