--- a/index.html
+++ b/index.html
@@ -180,6 +180,19 @@
         <!-- Cards-->
                 <div class="row"  id="cardContainer">
 
+                     <div class="col-md-4">
+                        <div class="card p-2">
+
+                            <div class="card-body">
+                                <h4 style="color: blue;">Peon Post Recruitment</h4>
+                                <p style="color: green;"> Odisha Govt Peon Post Recruitment ! 7th, 10th Pass ! Apply Now </p>
+                                <h5> <span class="badge bg-dark">New ------- ></span> <span class="badge bg-info"><a
+                                            class="nav-link" href="PeonPost.html">View Details</a></span>
+                                </h5>
+                            </div>
+
+                        </div>
+                    </div>
                     
                         <div class="col-md-4">
                             <div class="card p-2">
