--- a/PeonPost.html
+++ b/PeonPost.html
@@ -87,7 +87,7 @@
 
         <div class="row">
 
-            <h2 style="color: red;box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);"Odisha Govt Peon Post Recruitment ! 7th, 10th Pass ! Apply Now 
+            <h2 style="color: red;box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">Odisha Govt Peon Post Recruitment ! 7th, 10th Pass ! Apply Now 
             </h2>
 
             <img src="OdishaImage.png" alt="logo" height="300px" style=" box-shadow: 0 4px 6px rgba(0, 0, 0, 0.8);">
