--- a/LatestNotification.html
+++ b/LatestNotification.html
@@ -69,7 +69,7 @@
                     <div class="card-header">
                         <h4 style="color: blue;"> Peon Post Recruitment</h4>
                         <h5> <span class="badge bg-dark">New</span> <span class="badge bg-info"><a class="nav-link"
-                                    href="HondaRecruitment.html">View Details</a></span>
+                                    href="PeonPost.html">View Details</a></span>
                         </h5>
                     </div>
                     <div class="card-body">
