--- a/index.html
+++ b/index.html
@@ -187,6 +187,20 @@
                     <div class="row">
                         <div class="col-md-8">
                             <div class="notificationMore">
+                                
+                                 <a href="DetailsPages/MgMotor.html" class="nav-link">
+                                    <div class="firstBoundry">
+                                        <div class="secondBoundary">
+                                           <img src="Images/MgMotor.jpg" alt="" height="50px" width="50px">
+                                        </div>
+                                        <div class="secondBoundary">
+                                            <h6>MG Motor Recruitment 2023</h6>
+                                            <p>Open Campus Placement
+                                            </p>
+                                        </div>
+                                    </div>
+                                </a>
+                                
                                 <a href="PeonPost.html" class="nav-link">
                                     <div class="firstBoundry">
                                         <div class="secondBoundary">
