--- a/LatestNotification.html
+++ b/LatestNotification.html
@@ -63,7 +63,7 @@
     <div class="container-fluid">
         <!-- Cards-->
         <div class="row">
-             <div class="col-md-4">
+            <div class="col-md-4">
                 <div class="card p-2">
                     <div class="card-header">
                         <h4 style="color: blue;">MG Motor Recruitment</h4>
@@ -85,13 +85,12 @@
                     </div>
                 </div>
             </div>
-            
             <div class="col-md-4">
                 <div class="card p-2">
                     <div class="card-header">
                         <h4 style="color: blue;"> Peon Post Recruitment</h4>
                         <h5> <span class="badge bg-dark">New</span> <span class="badge bg-info"><a class="nav-link"
-                                    href="PeonPost.html">View Details</a></span>
+                                    href="DetailsPages/PeonPost.html">View Details</a></span>
                         </h5>
                     </div>
                     <div class="card-body">
@@ -113,7 +112,7 @@
                     <div class="card-header">
                         <h4 style="color: blue;"> Honda Recruitment 2023</h4>
                         <h5> <span class="badge bg-dark">New</span> <span class="badge bg-info"><a class="nav-link"
-                                    href="HondaRecruitment.html">View Details</a></span>
+                                    href="DetailsPages/HondaRecruitment.html">View Details</a></span>
                         </h5>
                     </div>
                     <div class="card-body">
@@ -137,7 +136,7 @@
                     <div class="card-header">
                         <h4 style="color: blue;"> Bank Of Borada Manager</h4>
                         <h5> <span class="badge bg-dark">New</span> <span class="badge bg-info"><a class="nav-link"
-                                    href="BankBaroda.html">View Details</a></span>
+                                    href="DetailsPages/BankBaroda.html">View Details</a></span>
                         </h5>
                     </div>
                     <div class="card-body">
@@ -159,7 +158,7 @@
                     <div class="card-header">
                         <h4 style="color: blue;"> Odisha Tahasil Office</h4>
                         <h5> <span class="badge bg-dark">New</span> <span class="badge bg-info"><a class="nav-link"
-                                    href="OdishaTahasilOffice.html">View Details</a></span>
+                                    href="DetailsPages/OdishaTahasilOffice.html">View Details</a></span>
                         </h5>
                     </div>
                     <div class="card-body">
@@ -182,7 +181,7 @@
                     <div class="card-header">
                         <h4 style="color: blue;"> ODISHA AGRICULTURE</h4>
                         <h5> <span class="badge bg-dark">New</span> <span class="badge bg-info"><a class="nav-link"
-                                    href="Agriculture.html">View Details</a></span>
+                                    href="DetailsPages/Agriculture.html">View Details</a></span>
                         </h5>
                     </div>
                     <div class="card-body">
