--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                                 <a href="DetailsPages/PeonPost.html" class="nav-link">
                                     <div class="firstBoundry">
                                         <div class="secondBoundary">
-                                           <img src="Images/tahasil.jpg" alt="" height="50px" width="50px">
+                                           <img src="Images/OdishaImage.png" alt="" height="50px" width="50px">
                                         </div>
                                         <div class="secondBoundary">
                                             <h6>Peon Post Recruitment</h6>
