--- a/LatestNotification.html
+++ b/LatestNotification.html
@@ -63,6 +63,28 @@
     <div class="container-fluid">
         <!-- Cards-->
         <div class="row">
+             <div class="col-md-4">
+                <div class="card p-2">
+                    <div class="card-header">
+                        <h4 style="color: blue;">Odisha Gram Panchayat Office Recruitment </h4>
+                        <h5> <span class="badge bg-dark">New</span> <span class="badge bg-info"><a class="nav-link"
+                                    href="DetailsPages/GramaPanchayata1.html">View Details</a></span>
+                        </h5>
+                    </div>
+                    <div class="card-body">
+                        <h4 style="color: blue;"> DEPARTMENT NEW</h4>
+                        <p style="color: green;">8th,10th, +3 Pass ! </p>
+
+                        <h5> <a class="nav-link"
+                                href="https://drive.google.com/file/d/119kIq76XjZcMZDkd2TzkSAE5l-TTuSfZ/view?usp=drivesdk">
+                                Notification Pdf <span class="badge bg-success"> Go</span></a></h5>
+
+                    </div>
+                    <div class="card-footer">
+                        <h4 style="color: black;">Salary 25,000 Per Month</h4>
+                    </div>
+                </div>
+            </div>
             <div class="col-md-4">
                 <div class="card p-2">
                     <div class="card-header">
