--- a/DetailsPages/GramaPanchayata1.html
+++ b/DetailsPages/GramaPanchayata1.html
@@ -93,7 +93,7 @@
             <h2 style="color: red;box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">Odisha Gram Panchayat Office Recruitment ! 8th,10th, +3 Pass ! Salary 25,000 Per Month
             </h2>
 
-            <img src="../Images/agriculture.jpg" alt="logo" height="300px"  style=" box-shadow: 0 4px 6px rgba(0, 0, 0, 0.8);">
+            <img src="../Images/GramaPanchayata1.jpg" alt="logo" height="300px"  style=" box-shadow: 0 4px 6px rgba(0, 0, 0, 0.8);">
             <p>Child Care Institute, Malkangiri District newly published a latest job notification for the vacancy of various post apply through offline application mode. So, friends we request you to visit our website and check out all the required notifications which is mentioned below.</p>
 
             <h5 style=" box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);">
