--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                                  <a href="DetailsPages/GramaPanchayata1.html" class="nav-link">
                                     <div class="firstBoundry">
                                         <div class="secondBoundary">
-                                           <img src="Images/MgMotor.jpg" alt="" height="50px" width="50px">
+                                           <img src="Images/GramaPanchayata1.jpg" alt="" height="50px" width="50px">
                                         </div>
                                         <div class="secondBoundary">
                                             <h6>Odisha Gram Panchayat Office Recruitment</h6>
