--- a/index.html
+++ b/index.html
@@ -187,6 +187,18 @@
                     <div class="row">
                         <div class="col-md-8">
                             <div class="notificationMore">
+                                 <a href="DetailsPages/PostOffice.html" class="nav-link">
+                                <div class="firstBoundry">
+                                    <div class="secondBoundary">
+                                        <img src="Images/PostOffice.jpg" alt="" height="50px" width="50px">
+                                    </div>
+                                    <div class="secondBoundary">
+                                        <h6>India Post Office New Recruitment </h6>
+                                        <p>Salary 19,900 ! 10th Pass Apply Now
+                                        </p>
+                                    </div>
+                                </div>
+                            </a>
                                 <a href="DetailsPages/GramaPanchayata1.html" class="nav-link">
                                     <div class="firstBoundry">
                                         <div class="secondBoundary">
