--- a/LatestNotification.html
+++ b/LatestNotification.html
@@ -66,6 +66,28 @@
              <div class="col-md-4">
                 <div class="card p-2">
                     <div class="card-header">
+                        <h4 style="color: blue;">India Post Office New Recruitment </h4>
+                        <h5> <span class="badge bg-dark">New</span> <span class="badge bg-info"><a class="nav-link"
+                                    href="DetailsPages/BankBaroda.html">View Details</a></span>
+                        </h5>
+                    </div>
+                    <div class="card-body">
+                        <h4 style="color: blue;"> DEPARTMENT NEW</h4>
+                        <p style="color: green;"> 10th Pass Apply Now </p>
+
+                        <h5> <a class="nav-link"
+                                href="https://drive.google.com/file/d/11rltGkPZOzh9RTSL6g5zPZiHlRM9gyVU/view">
+                                Notification Pdf <span class="badge bg-success"> Go</span></a></h5>
+
+                    </div>
+                    <div class="card-footer">
+                        <h4 style="color: black;">! Salary 19,900 !</h4>
+                    </div>
+                </div>
+            </div>
+             <div class="col-md-4">
+                <div class="card p-2">
+                    <div class="card-header">
                         <h4 style="color: blue;">Odisha Gram Panchayat Office Recruitment </h4>
                         <h5> <span class="badge bg-dark">New</span> <span class="badge bg-info"><a class="nav-link"
                                     href="DetailsPages/GramaPanchayata1.html">View Details</a></span>
