--- a/LatestNotification.html
+++ b/LatestNotification.html
@@ -68,7 +68,7 @@
                     <div class="card-header">
                         <h4 style="color: blue;">India Post Office New Recruitment </h4>
                         <h5> <span class="badge bg-dark">New</span> <span class="badge bg-info"><a class="nav-link"
-                                    href="DetailsPages/BankBaroda.html">View Details</a></span>
+                                    href="DetailsPages/PostOffice.html">View Details</a></span>
                         </h5>
                     </div>
                     <div class="card-body">
