--- a/index.html
+++ b/index.html
@@ -187,6 +187,18 @@
                     <div class="row">
                         <div class="col-md-8">
                             <div class="notificationMore">
+                                 <a href="DetailsPages/IndianRailway.html" class="nav-link">
+                                <div class="firstBoundry">
+                                    <div class="secondBoundary">
+                                        <img src="Images/IndianRailway.jpg" alt="" height="50px" width="50px">
+                                    </div>
+                                    <div class="secondBoundary">
+                                        <h6>Indian Railway 10th Pass Recruitment ! </h6>
+                                        <p>Apply Online For 3105 Posts
+                                        </p>
+                                    </div>
+                                </div>
+                            </a>
                                  <a href="DetailsPages/PostOffice.html" class="nav-link">
                                 <div class="firstBoundry">
                                     <div class="secondBoundary">
