--- a/LatestNotification.html
+++ b/LatestNotification.html
@@ -66,6 +66,31 @@
              <div class="col-md-4">
                 <div class="card p-2">
                     <div class="card-header">
+                        <h4 style="color: blue;">Indian Railway 10th Pass Recruitment </h4>
+                        <h5> <span class="badge bg-dark">New</span> <span class="badge bg-info"><a class="nav-link"
+                                    href="DetailsPages/IndianRailway.html">View Details</a></span>
+                        </h5>
+                    </div>
+                    <div class="card-body">
+                        <h4 style="color: blue;"> DEPARTMENT NEW</h4>
+                        <p style="color: green;"> ! Apply Online For 3105 Posts  </p>
+
+                        <h5> <a class="nav-link"
+                                href="https://wcr.indianrailways.gov.in/uploads/files/1702551654673-Act%20apprentice%20notification%202023_24.pdf">
+                                Notification Pdf <span class="badge bg-success"> Go</span></a></h5>
+                                <h5> <a class="nav-link"
+                                    href="https://nitplrrc.com/RRC_JBP_ACT2023/">
+                                    Applay Link <span class="badge bg-primary">Link</span></a></h5>
+
+                    </div>
+                    <div class="card-footer">
+                        <h4 style="color: black;">7,000/- to 12,000/- Per Month</h4>
+                    </div>
+                </div>
+            </div>
+             <div class="col-md-4">
+                <div class="card p-2">
+                    <div class="card-header">
                         <h4 style="color: blue;">India Post Office New Recruitment </h4>
                         <h5> <span class="badge bg-dark">New</span> <span class="badge bg-info"><a class="nav-link"
                                     href="DetailsPages/PostOffice.html">View Details</a></span>
