--- a/LatestNotification.html
+++ b/LatestNotification.html
@@ -66,6 +66,31 @@
              <div class="col-md-4">
                 <div class="card p-2">
                     <div class="card-header">
+                        <h4 style="color: blue;">Jindal Steel Plant Recruitment</h4>
+                        <h5> <span class="badge bg-dark">New</span> <span class="badge bg-info"><a class="nav-link"
+                                    href="DetailsPages/JindalSteelPlant.html">View Details</a></span>
+                        </h5>
+                    </div>
+                    <div class="card-body">
+                        <h4 style="color: blue;"> DEPARTMENT NEW</h4>
+                        <p style="color: green;">  Apply Online For 2000+ Posts   </p>
+
+                        <h5> <a class="nav-link"
+                                href="https://www.jindalsteelpower.com/job-openings.html">
+                                Web Site<span class="badge bg-success"> view</span></a></h5>
+                                <h5> <a class="nav-link"
+                                    href="https://www.jindalsteelpower.com/job-application.html">
+                                    Applay Online <span class="badge bg-danger">Link</span></a></h5>
+
+                    </div>
+                    <div class="card-footer">
+                        <h4 style="color: black;">16,800/- to 27,400/ </h4>
+                    </div>
+                </div>
+            </div>
+             <div class="col-md-4">
+                <div class="card p-2">
+                    <div class="card-header">
                         <h4 style="color: blue;">Indian Railway 10th Pass Recruitment </h4>
                         <h5> <span class="badge bg-dark">New</span> <span class="badge bg-info"><a class="nav-link"
                                     href="DetailsPages/IndianRailway.html">View Details</a></span>
