--- a/index.html
+++ b/index.html
@@ -79,6 +79,18 @@
                 <div class="position-sticky">
                     <ul class="nav flex-column">
                         <li class="nav-item">
+                              <a href="DetailsPages/JindalSteelPlant.html" class="nav-link">
+                                <div class="firstBoundry">
+                                    <div class="secondBoundary">
+                                        <img src="Images/JindalSteelPlant.png" alt="" height="50px" width="50px">
+                                    </div>
+                                    <div class="secondBoundary">
+                                        <h6>Jindal Steel Plant New Recruitment</h6>
+                                        <p>For 2000+ Posts
+                                        </p>
+                                    </div>
+                                </div>
+                            </a>
                             <a class="nav-link active" aria-current="page" href="LatestNotification.html">
                                 <i class="bi bi-bell-fill d-md-inline " style="color: red;"></i>
                                 <span class=""> Latest Notifications</span>
