--- a/LatestNotification.html
+++ b/LatestNotification.html
@@ -63,6 +63,31 @@
     <div class="container-fluid">
         <!-- Cards-->
         <div class="row">
+              <div class="col-md-4">
+                <div class="card p-2">
+                    <div class="card-header">
+                        <h4 style="color: blue;">Bank Peon Post Recruitment </h4>
+                        <h5> <span class="badge bg-dark">New</span> <span class="badge bg-info"><a class="nav-link"
+                                    href="DetailsPages/BankPeonCentralBank.html">View Details</a></span>
+                        </h5>
+                    </div>
+                    <div class="card-body">
+                        <h4 style="color: blue;"> DEPARTMENT NEW</h4>
+                        <p style="color: green;"> ! 8th, 10th Pass ! Apply Online For 484 Posts </p>
+
+                        <h5> <a class="nav-link"
+                                href="https://drive.google.com/file/d/130gupRLuoQcfH6o0gzopDywpGmJlJzjR/view">
+                                Web Site<span class="badge bg-success"> view</span></a></h5>
+                                <h5> <a class="nav-link"
+                                    href="https://ibpsonline.ibps.in/cbiskssnov23/basic_details.php">
+                                    Applay Online <span class="badge bg-danger">Link</span></a></h5>
+
+                    </div>
+                    <div class="card-footer">
+                        <h4 style="color: black;">14,500/- to 28,145/- </h4>
+                    </div>
+                </div>
+            </div>
              <div class="col-md-4">
                 <div class="card p-2">
                     <div class="card-header">
