--- a/index.html
+++ b/index.html
@@ -188,6 +188,18 @@
                     <div class="row">
                         <div class="col-md-8">
                             <div class="notificationMore">
+                                <a href="DetailsPages/BankPeonCentralBank.html" class="nav-link ">
+                                <div class="firstBoundry">
+                                    <div class="secondBoundary">
+                                        <img src="Images/BankPeonCentralBank.jpg" alt="" height="50px" width="50px">
+                                    </div>
+                                    <div class="secondBoundary">
+                                        <h6>Bank Peon Post Recruitment  </h6>
+                                        <p>8th, 10th Pass ! Apply Online For 484 Posts
+                                        </p>
+                                    </div>
+                                </div>
+                            </a>
                                 <a href="DetailsPages/JindalSteelPlant.html" class="nav-link">
                                 <div class="firstBoundry">
                                     <div class="secondBoundary">
