--- a/LatestNotification.html
+++ b/LatestNotification.html
@@ -63,6 +63,31 @@
     <div class="container-fluid">
         <!-- Cards-->
         <div class="row">
+             <div class="col-md-4">
+                <div class="card p-2">
+                    <div class="card-header">
+                        <h4 style="color: blue;">18-High-Income-Online</h4>
+                        <h5> <span class="badge bg-dark">New</span> <span class="badge bg-info"><a class="nav-link"
+                                    href="DetailsPages/workfromome.html">View Details</a></span>
+                        </h5>
+                    </div>
+                    <div class="card-body">
+                        <h4 style="color: blue;"> DEPARTMENT NEW</h4>
+                        <p style="color: green;"> Work-From-Jobs-Odisha</p>
+
+                        <h5> <a class="nav-link"
+                                href="https://in.indeed.com/?from=mobRdr&utm_source=%2Fm%2F&utm_medium=redir&utm_campaign=dt">
+                                Applay link <span class="badge bg-success"> Applay</span></a></h5>
+                                <h5> <a class="nav-link"
+                                    href="https://www.ncs.gov.in/jobs-in-orissa">
+                                   Click Here <span class="badge bg-danger"> Go</span></a></h5>
+
+                    </div>
+                    <div class="card-footer">
+                        <h4 style="color: black;"></h4>
+                    </div>
+                </div>
+            </div>
               <div class="col-md-4">
                 <div class="card p-2">
                     <div class="card-header">
