--- a/index.html
+++ b/index.html
@@ -188,6 +188,18 @@
                     <div class="row">
                         <div class="col-md-8">
                             <div class="notificationMore">
+                                <a href="DetailsPages/workfromome.html" class="nav-link">
+                                    <div class="firstBoundry">
+                                        <div class="secondBoundary">
+                                           <img src="Images/workfromhome.jpg" alt="" height="50px" width="50px">
+                                        </div>
+                                        <div class="secondBoundary">
+                                            <h6>18-High-Income-Online </h6>
+                                            <p>Work-From-Jobs-Odisha
+                                            </p>
+                                        </div>
+                                    </div>
+                                </a>
                                 <a href="DetailsPages/BankPeonCentralBank.html" class="nav-link ">
                                 <div class="firstBoundry">
                                     <div class="secondBoundary">
