--- a/index.html
+++ b/index.html
@@ -188,6 +188,18 @@
                     <div class="row">
                         <div class="col-md-8">
                             <div class="notificationMore">
+                                 <a href="DetailsPages/OdishaCollectorOffice.html" class="nav-link">
+                                    <div class="firstBoundry">
+                                        <div class="secondBoundary">
+                                           <img src="Images/OdishaImage.png" alt="" height="50px" width="50px">
+                                        </div>
+                                        <div class="thirdBoundary">
+                                            <h6>Odisha Collector Office New Recruitment !</h6>
+                                            <p>  Apply Offline For Peon, Superintendent And Sweeper Postsy</p>
+                                            
+                                        </div>
+                                    </div>
+                                </a>
                                 <a href="DetailsPages/workfromome.html" class="nav-link">
                                     <div class="firstBoundry">
                                         <div class="secondBoundary">
