--- a/LatestNotification.html
+++ b/LatestNotification.html
@@ -66,6 +66,31 @@
              <div class="col-md-4">
                 <div class="card p-2">
                     <div class="card-header">
+                        <h4 style="color: blue;">Odisha Collector Office New Recruitment !</h4>
+                        <h5> <span class="badge bg-dark">New</span> <span class="badge bg-info"><a class="nav-link"
+                                    href="DetailsPages/OdishaCollectorOffice.html">View Details</a></span>
+                        </h5>
+                    </div>
+                    <div class="card-body">
+                        <h4 style="color: blue;"> DEPARTMENT NEW</h4>
+                        <p style="color: green;"> Apply Offline For Peon, Superintendent And Sweeper Posts</p>
+
+                        <h5> <a class="nav-link"
+                                href="https://drive.google.com/file/d/14MIfRvydKikY88b771-dvaK6AElZ7_SV/view">
+                                Notification PDF Link 1 <span class="badge bg-primary"> Download</span></a></h5>
+                                <h5> <a class="nav-link"
+                                    href="https://drive.google.com/file/d/119kIq76XjZcMZDkd2TzkSAE5l-TTuSfZ/view">
+                                    Notification PDF Link 12 <span class="badge bg-danger"> Download</span></a></h5>
+
+                    </div>
+                    <div class="card-footer">
+                        <h4 style="color: black;"></h4>
+                    </div>
+                </div>
+            </div>
+             <div class="col-md-4">
+                <div class="card p-2">
+                    <div class="card-header">
                         <h4 style="color: blue;">18-High-Income-Online</h4>
                         <h5> <span class="badge bg-dark">New</span> <span class="badge bg-info"><a class="nav-link"
                                     href="DetailsPages/workfromome.html">View Details</a></span>
