--- a/DetailsPages/OdishaCollectorOffice.html
+++ b/DetailsPages/OdishaCollectorOffice.html
@@ -90,8 +90,10 @@
 
         <div class="row">
 
-            <h2 style="color: red;box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">Office of the Collector and District Magistrate, Balangir newly published latest job notification for the vacancy of 72 Peon and other posts apply through offline application mode. So, we request you to visit our website and check out all the required notifications which is mentioned below.
+            <h2 style="color: red;box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">Office of the Collector and District Magistrate, Odisha Collector Office New Recruitment ! Apply Offline For Peon, Superintendent And Sweeper Posts
+
             </h2>
+            <p>Office of the Collector and District Magistrate, Balangir newly published latest job notification for the vacancy of 72 Peon and other posts apply through offline application mode. So, we request you to visit our website and check out all the required notifications which is mentioned below.</p>
 
             <img src="../Images/OdishaImage.png" alt="logo" height="300px"  style=" box-shadow: 0 4px 6px rgba(0, 0, 0, 0.8);">
           
