--- a/index.html
+++ b/index.html
@@ -194,8 +194,9 @@
                                            <img src="Images/OdishaImage.png" alt="" height="50px" width="50px">
                                         </div>
                                         <div class="thirdBoundary">
-                                            <h6>Odisha Collector Office New Recruitment !</h6>
-                                            <p>  Apply Offline For Peon, Superintendent And Sweeper Postsy</p>
+                                            <h6>Odisha Collector Office!</h6>
+                                            <p>  Apply Offline For Peon, </p>
+                                            <p>Superintendent And Sweeper Postsy/p>
                                             
                                         </div>
                                     </div>
