--- a/index.html
+++ b/index.html
@@ -195,8 +195,8 @@
                                         </div>
                                         <div class="thirdBoundary">
                                             <h6>Odisha Collector Office!</h6>
-                                            <p>  Apply Offline For Peon, </p>
-                                            <p>Superintendent And Sweeper Postsy/p>
+                                            <p>  Apply Offline For Peon, 
+                                            Superintendent And Sweeper Postsy</p>
                                             
                                         </div>
                                     </div>
