--- a/LatestNotification.html
+++ b/LatestNotification.html
@@ -64,6 +64,43 @@
         <!-- Cards-->
         <div class="row">
              <div class="col-md-4">
+          <div class="card p-2">
+            <div class="card-header">
+              <h4 style="color: blue">Odisha Teacher Post Recruitment</h4>
+              <h5>
+                <span class="badge bg-dark">New</span>
+                <span class="badge bg-info"
+                  ><a
+                    class="nav-link"
+                    href="DetailsPages/OdishaTeacherPost.html"
+                    >View Details</a
+                  ></span
+                >
+              </h5>
+            </div>
+            <div class="card-body">
+              <h4 style="color: blue">DEPARTMENT NEW</h4>
+              <p style="color: green">
+                ! Apply Offline For Music, Art And PT Teacher Posts
+              </p>
+
+              <h5>
+                <a
+                  class="nav-link"
+                  href="https://drive.google.com/file/d/15Av7k3jIPD6f3RhQeqMSvQk7ZEUaFsBh/view"
+                >
+                  Notification PDF Link
+                  <span class="badge bg-primary"> Download</span></a
+                >
+              </h5>
+            </div>
+            <div class="card-footer">
+              <p>7,944/- to 10,000/- Per Month</p>
+              <h4 style="color: black"></h4>
+            </div>
+          </div>
+        </div>
+             <div class="col-md-4">
                 <div class="card p-2">
                     <div class="card-header">
                         <h4 style="color: blue;">Odisha Collector Office New Recruitment !</h4>
